# chaos-engineering

./: .editorconfig  .env.example  .gitignore  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_request.md
.github/workflows/: ci.yml  security.yml
manifests/: experiment-cpu.yml  experiment-network.yml  experiment-pod-kill.yml
src/: __init__.py
src/ai/: __init__.py  analyzer.py
src/dashboard/: __init__.py  index.html
src/experiments/: __init__.py  cpu_stress.py  disk_fill.py  dns_failure.py  network_latency.py  pod_kill.py
src/runner/: __init__.py  cli.py  orchestrator.py
terraform/: main.tf
tests/: conftest.py  test_analyzer.py  test_orchestrator.py
vcluster/: README.md  setup.sh  teardown.sh  vcluster.yaml
